ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/subnets: subnet-024f61a26470119b7,subnet-0db8816380924b5b4
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /sp
            backend:
              service:
                name: sp-svc
                port:
                  number: 80
          - pathType: Prefix
            path: /
            backend:
              service:
                name: sup-svc
                port:
                  number: 80
